--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = Books
+PRODUCT_NAME = KindBooks
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.mycompany.books
+PRODUCT_BUNDLE_IDENTIFIER = com.mycompany.kindbooks
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2022 Books. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2022 KindBooks. All rights reserved.
